Cancelling the subscribed Observable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,4 +4,6 @@
 
 <app-new-observable></app-new-observable> -->
 
-<app-function-observable></app-function-observable>
+<!-- <app-function-observable></app-function-observable> -->
+
+<app-cancelling-observable></app-cancelling-observable>
