Avoid memory leak

--- a/src/app/components/cancelling-observable/cancelling-observable.component.html
+++ b/src/app/components/cancelling-observable/cancelling-observable.component.html
@@ -1,3 +1,5 @@
 <p>cancelling-observable works!</p>
 
 <button (click)="cancelTimer()">Cancel Timer</button>
+
+<div *ngFor="let timer of timers">{{ timer }}</div>
