Implement multiple operators

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,6 @@
 
 <!-- <app-function-observable></app-function-observable> -->
 
-<app-cancelling-observable></app-cancelling-observable>
+<!-- <app-cancelling-observable></app-cancelling-observable> -->
+
+<app-operators-basics></app-operators-basics>
