--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,4 +8,5 @@
 
 <!-- <app-cancelling-observable></app-cancelling-observable> -->
 
-<app-operators-basics></app-operators-basics>
+<!-- <app-operators-basics></app-operators-basics> -->
+<router-outlet></router-outlet>
