--- a/src/app/pages/operators/operators.component.html
+++ b/src/app/pages/operators/operators.component.html
@@ -4,6 +4,7 @@
     <ul>
       <li><a routerLink="buffer">Buffer</a></li>
       <li><a routerLink="buffercount">Buffer Count</a></li>
+      <li><a routerLink="buffertimer">Buffer Timer</a></li>
     </ul>
   </div>
   <div style="flex:4">
