--- a/src/app/pages/operators/operators.component.html
+++ b/src/app/pages/operators/operators.component.html
@@ -5,6 +5,7 @@
       <li><a routerLink="buffer">Buffer</a></li>
       <li><a routerLink="buffercount">Buffer Count</a></li>
       <li><a routerLink="buffertimer">Buffer Timer</a></li>
+      <li><a routerLink="buffertoggle">Buffer Toggle</a></li>
     </ul>
   </div>
   <div style="flex:4">
