--- a/src/app/pages/operators/operators.component.html
+++ b/src/app/pages/operators/operators.component.html
@@ -11,6 +11,7 @@
       <li><a routerLink="takelast">TakeLast</a></li>
       <li><a routerLink="takeuntil">TakeUntil</a></li>
       <li><a routerLink="takewhile">TakeWhile</a></li>
+      <li><a routerLink="skip">Skip</a></li>
     </ul>
   </div>
   <div style="flex:4">
