--- a/src/app/pages/operators/operators.component.html
+++ b/src/app/pages/operators/operators.component.html
@@ -1,6 +1,6 @@
 <a routerLink="/">Operators</a>
-<div style="display:flex">
-  <div style="flex:1">
+<div style="display: flex">
+  <div style="flex: 1">
     <ul>
       <li><a routerLink="buffer">Buffer</a></li>
       <li><a routerLink="buffercount">Buffer Count</a></li>
@@ -13,9 +13,10 @@
       <li><a routerLink="takewhile">TakeWhile</a></li>
       <li><a routerLink="skip">Skip</a></li>
       <li><a routerLink="skiplast">SkipLast</a></li>
+      <li><a routerLink="skipuntil">SkipUntil</a></li>
     </ul>
   </div>
-  <div style="flex:4">
+  <div style="flex: 4">
     <div>
       <router-outlet></router-outlet>
     </div>
