--- a/src/app/pages/operators/operators.component.html
+++ b/src/app/pages/operators/operators.component.html
@@ -14,6 +14,7 @@
       <li><a routerLink="skip">Skip</a></li>
       <li><a routerLink="skiplast">SkipLast</a></li>
       <li><a routerLink="skipuntil">SkipUntil</a></li>
+      <li><a routerLink="skipwhile">SkipWhile</a></li>
     </ul>
   </div>
   <div style="flex: 4">
