--- a/src/app/pages/operators/operators.component.html
+++ b/src/app/pages/operators/operators.component.html
@@ -20,6 +20,9 @@
       <li>
         <a routerLink="distinctuntilkeychanged">DistinctKeyUntilChanged</a>
       </li>
+      <li>
+        <a routerLink="filter">Filter</a>
+      </li>
     </ul>
   </div>
   <div style="flex: 4">
