--- a/src/app/pages/operators/operators.component.html
+++ b/src/app/pages/operators/operators.component.html
@@ -20,9 +20,8 @@
       <li>
         <a routerLink="distinctuntilkeychanged">DistinctKeyUntilChanged</a>
       </li>
-      <li>
-        <a routerLink="filter">Filter</a>
-      </li>
+      <li><a routerLink="filter">Filter</a></li>
+      <li><a routerLink="sample">Sample</a></li>
     </ul>
   </div>
   <div style="flex: 4">
