--- a/src/app/pages/operators/operators.component.html
+++ b/src/app/pages/operators/operators.component.html
@@ -22,6 +22,7 @@
       </li>
       <li><a routerLink="filter">Filter</a></li>
       <li><a routerLink="sample">Sample</a></li>
+      <li><a routerLink="audit">Audit</a></li>
     </ul>
   </div>
   <div style="flex: 4">
