--- a/src/app/pages/operators/operators.component.html
+++ b/src/app/pages/operators/operators.component.html
@@ -25,6 +25,7 @@
       <li><a routerLink="audit">Audit</a></li>
       <li><a routerLink="throttle">Throttle</a></li>
       <li><a routerLink="first">First</a></li>
+      <li><a routerLink="last">Last</a></li>
     </ul>
   </div>
   <div style="flex: 4">
